--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,12 @@
 body {
 
-    margin: 0px;
 }
 
 section {
 
     overflow: hidden;
     background: #FFF;
-    width: 98%;
-    margin: auto;
+    width: 100%;
 }
 
 .banner {}
@@ -20,7 +18,7 @@ section {
     width: 50%;
     box-sizing: border-box;
     float: left;
-    height: 440px;
+    overflow: hidden;
 }
 
 .logo {}
@@ -56,7 +54,7 @@ section {
 }
 
 .menu ul li a:hover {
-    background: #a88f75
+    color: #939393;
 }
 
 .name {
@@ -87,16 +85,15 @@ section {
     font-weight: 100;
 }
 
-.image {}
+.image {width: 50%;float: left;overflow: hidden;}
 
 .picture {
-    width: 102%;
+    width: 100%;
     margin-top: 0px;
 }
 
 .picture img {
-    width: 102%;
-    margin-top: 236px;
+    width: 100%;
 }
 
 .social {
@@ -118,7 +115,7 @@ section {
 
 .social ul li a {color: black;}
 
-.social ul li a:hover {}
+.social ul li a:hover {color: #005761;}
 
 .about-me {}
 
@@ -167,26 +164,27 @@ section {
 
 .video {
     height: 688px;
-    margin: 0px 15px;
-    width: 1245px;
+    width: 100%;
+    margin-left: 13px;
+    display: block;
 }
  
 
 .photos-content {}
 .photos-content h1 {text-align: center;font-size: 58px;margin: 62px;color: #015860;}
-.photos {}
-.column-1 {margin: 0px -27px 0px 33px;}
-.column-1 img {float: left;box-sizing: border-box;margin-right: -19px;height: 325px;margin-bottom: 25px;padding-right: 40px;}
+.photos {width: 100%;}
+.column-1 {margin: 0px -8px 0px 23px;}
+.column-1 img {float: left;box-sizing: border-box;margin-right: -20px;height: 325px;margin-bottom: 25px;padding-right: 40px;}
 
-.column-2 {margin: 0px -49px 0px 33px;}
+.column-2 {margin: 0px -8px 0px 23px;}
 .column-2 img{float: left;box-sizing: border-box;margin-right: -19px;height: 325px;margin-bottom: 38px;padding-right: 40px;}
 
 
-.contact{overflow: hidden; width: 100%;margin-left: 27px;margin-top: 26px;}
+.contact{overflow: hidden; width: 100%;margin-top: 26px;background: #005761;}
 
-.contact-image{float: left;overflow: hidden;width: 50%;box-sizing: border-box;}
-.contact-image img{width: 631px;}
-.contact-info{background-color: #005761;width: 50%;float: left;box-sizing: border-box;height: 946px;margin-left: -1px;}
+.contact-image{float: left;overflow: hidden;width: 50%;box-sizing: border-box;margin-bottom: -2px;}
+.contact-image img{width: 100%;}
+.contact-info{width: 50%;float: left;box-sizing: border-box;overflow: hidden;}
 .contact-info h1{color: #F7DC4F;margin: 150px 197px 34px;font-size: 66px;}
 .contact-info h2{margin-left: 201px;color: #fff;margin-top: 0px;font-weight: 822;margin-bottom: 45px;}
 .manager{margin-left: 201px;line-height: 3px;margin-bottom: 73px;color: white;}
@@ -199,5 +197,6 @@ h6{font-size: 13px;font-weight: normal;}
 .contact-info ul {list-style: none;display: flex;margin-left: 151px;margin-top: -24px;}
 .contact-info ul li{padding: 10px;}
 .contact-info ul li a {color: white;}
-footer {margin: 22px 455px 37px;}
+footer {margin: 22px 37px;text-align: center;}
 .footer {color: black;font-weight: bold;}
+.icon:hover {color: #939393;}
